--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://unpkg.com/vue"></script>
-    <script src="http://momentjs.com/downloads/moment.js"></script>
+    <script src="vendor/moment/moment.min.js"></script>
 </head>
 
 <body id="page-top">
