--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Imkerverein Schneverdingen e.V.</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>Willkommen auf der Seite des Imkerverein Schneverdingen e.V. Informieren Sie sich über unseren Verein und unsere aktuellen Aktivitäten.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Mehr Informationen</a>
             </div>
         </div>
@@ -88,7 +88,6 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Der Verein</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                     <p class="text-faded">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
 
 <p class="text-faded">In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p>
@@ -273,11 +272,11 @@
                     <h2 class="section-heading">Treten Sie mit uns in Kontakt!</h2>
                     <hr class="primary">
                     <p>Haben wir Ihre Interesse am Imkern geweckt?<br /> Grossartig!</p>
-                    <p>Rufen Sie unseren 1. Vorsitzenden Günther Knopp an oder schreiben Sie Ihm eine Email.<br />Wir freuen uns über Ihr Interesse!</p>
+                    <p>Rufen Sie unseren 1. Vorsitzenden Max Mustermann an oder schreiben Sie Ihm eine Email.<br />Wir freuen uns über Ihr Interesse!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>(+49) 5193 6228</p>
+                    <p>(+49) 1234 4567</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
