--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Zum vergrößern klicken
                                 </div>
-                                <div class="project-name">
+                                <!--<div class="project-name">
                                     Project Name
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </a>
@@ -210,11 +210,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Zum vergrößern klicken
                                 </div>
-                                <div class="project-name">
+                                <!--<div class="project-name">
                                     Project Name
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </a>
@@ -225,11 +225,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Zum vergrößern klicken
                                 </div>
-                                <div class="project-name">
+                                <!--<div class="project-name">
                                     Project Name
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </a>
@@ -240,11 +240,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Zum vergrößern klicken
                                 </div>
-                                <div class="project-name">
+                                <!--<div class="project-name">
                                     Project Name
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </a>
@@ -255,11 +255,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Zum vergrößern klicken
                                 </div>
-                                <div class="project-name">
+                                <!--<div class="project-name">
                                     Project Name
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </a>
@@ -270,11 +270,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Zum vergrößern klicken
                                 </div>
-                                <div class="project-name">
+                                <!--<div class="project-name">
                                     Project Name
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </a>
