--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Imkerverein Schneverdingen e.V.</title>
+    <title>Imkerverein Schneverdingen</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Imkerverein Schneverdingen e.V.</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Imkerverein Schneverdingen</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,9 +75,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" class="btn btn-primary btn-xl page-scroll">Imkerverein Schneverdingen e.V.</h1>
+                <h1 id="homeHeading" class="btn btn-primary btn-xl page-scroll">Imkerverein Schneverdingen</h1>
                 <!--<hr>-->
-                <!--<p>Willkommen auf der Seite des Imkerverein Schneverdingen e.V. Informieren Sie sich über unseren Verein und unsere aktuellen Aktivitäten.</p>-->
+                <!--<p>Willkommen auf der Seite des Imkerverein Schneverdingen Informieren Sie sich über unseren Verein und unsere aktuellen Aktivitäten.</p>-->
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Mehr Informationen</a>
             </div>
         </div>
@@ -88,7 +88,7 @@
            
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Willkommen auf der Seite des Imkerverein Schneverdingen e.V. Informieren Sie sich über unseren Verein und unsere aktuellen Aktivitäten.</h2>
+                    <h2 class="section-heading">Willkommen auf der Seite des Imkerverein Schneverdingen Informieren Sie sich über unseren Verein und unsere aktuellen Aktivitäten.</h2>
                     <hr class="light">
                     <p class="text-faded">Im Dezember 1908 haben sich 15 Imker zusammengetan und gründeten einen Bienenwirtschaftlichen Verein für Schneverdingen und Umgebung. Als 1. Vorsitzender wurde damals H. Broocks von der Versammlung gewählt. Den Mitgliedern ging es in erster Linie um den gemeinschaftlichen Einkauf von Zucker für die Bienen.</p>
 
