fix: wrong contact data

--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
                     <h2 class="section-heading">Treten Sie mit uns in Kontakt!</h2>
                     <hr class="primary">
                     <p>Haben wir Ihre Interesse am Imkern geweckt?<br /> Grossartig!</p>
-                    <p>Rufen Sie unseren 1. Vorsitzenden Günter Knopp an oder schreiben Sie Ihm eine Email.<br />Wir freuen uns über Ihr Interesse!</p>
+                    <p>Rufen Sie unseren 1. Vorsitzenden {{ chairman.name }} an oder schreiben Sie Ihm eine Email.<br />Wir freuen uns über Ihr Interesse!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>05193 6228</p>
+                    <p>{{ chairman.phone }}</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
