--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
                     <p class="text-faded">Im Dezember 1958 feierte der Verein sein 50 jähriges bestehen unter der Leitung des 1. Vorsitzenden O. Vorwerk.<br />Ab Januar 1977 übernahm H.J. Graupner das Amt des 1. Vorsitzenden.<br />Nach dem plötzlichen Tod von H.J. Graupner im Jahre 1996 wurde G. Knopp zum 1. Vorsitzenden gewählt.</p>
                     <p class="text-faded">2008 wurde das 100 jährige bestehen des Vereins gefeiert. Es folgte eine Umbenennung des Vereins in den heute bekannten Namen Imkerverein Schneverdingen. Zur Zeit hat der Verein 58 aktive Mitglieder.</p>
+                    <p class="text-faded">Im Januar 2018 wurde Heinrich Inselmann zum 1. Vorsitzenden gewählt und übernahm somit das Amt von G. Knopp.</p>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Kontakt aufnehmen</a>
                 </div>
             </div>
