chore: update board members

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                     <p>Rufen Sie unseren 1. Vorsitzenden {{ chairman.name }} an oder schreiben Sie Ihm eine Email.<br />Wir freuen uns über Ihr Interesse!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <div>☎️</div>
                     <p>{{ chairman.phone }}</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <div>📧</div>
                     <p><a href="mailto:verein@imkerverein-schneverdingen.de">verein@imkerverein-schneverdingen.de</a></p>
                 </div>
             </div>
